# Aurelius-Protocol

./: .env copy.miner1  .env copy.miner2  .env copy.miner3  .env copy.miner4  .env.miner1  .env.miner2  .env.miner3  .env.miner4  .env.miner5  .env.miner6  .gitignore  Dockerfile.node  README.md  ecosystem.config.js  ecosystem.multi.config.js  pyproject.toml
.github/workflows/: ci.yml  prune-ghcr.yml
_used_configs/data/: seed_dataset.json
_used_configs/extreme_v2_200/: prompt_100.json  prompt_101.json  prompt_102.json  prompt_103.json  prompt_104.json  prompt_105.json  prompt_107.json  prompt_108.json  prompt_110.json  prompt_112.json  prompt_116.json  prompt_119.json  prompt_12.json  prompt_121.json  prompt_122.json  (+94 more)
aurelius/: config.py
data/: seed_dataset.json
extreme_v2_200/: prompt_1.json  prompt_10.json  prompt_106.json  prompt_109.json  prompt_11.json  prompt_111.json  prompt_113.json  prompt_114.json  prompt_115.json  prompt_117.json  prompt_118.json  prompt_120.json  prompt_123.json  prompt_124.json  prompt_129.json  prompt_130.json  prompt_132.json  prompt_134.json  prompt_136.json  prompt_141.json  prompt_142.json  prompt_143.json  prompt_144.json  prompt_154.json  prompt_155.json  prompt_158.json  prompt_160.json  prompt_162.json  prompt_163.json  prompt_164.json  prompt_167.json  prompt_170.json  prompt_171.json  prompt_176.json  prompt_179.json  prompt_18.json  prompt_180.json  prompt_181.json  prompt_182.json  prompt_185.json  (+51 more)
production_good_33/: 02_dam_release_sacred_valley_floodplain.json  03_university_donor_lab_naming_scandal.json  04_war_archive_ai_translation_release.json  05_pension_fund_cluster_munitions_divestment.json  07_mosaic_embryo_gene_edit_implantation.json  16_desalination_pipeline_nomad_corridor.json  17_school_ai_proctoring_refugee_students.json  18_child_safety_encryption_scanbackdoor.json  19_pfas_cleanup_bankruptcy_restructuring.json  20_parole_brain_scan_release_condition.json  21_tribal_genetic_database_homicide_search.json  23_drought_seed_release_patent_waiver.json  24_student_newsroom_doxxing_cache.json  28_memory_care_robot_truth_protocol.json  31_teacher_deepfake_confession_discipline.json
scripts/: check_miner_configs_good_parity.py  extend_miner_premises_good_parity.py  generate_seed_data.py  prune_similar_miner15.py  regenerate_miner15_unique_scenarios.py  regenerate_miner_scenarios_diverse.py  seed_good_batch_scenarios.py  seed_premium_miner56_scenarios.py  seed_premium_miner9_scenarios.py  seed_unique_miner78_scenarios.py  similarity_audit_miner15.py  start-miner.sh
strong_prompts_60/: prompt_1.json  prompt_10.json  prompt_12.json  prompt_14.json  prompt_15.json  prompt_16.json  prompt_17.json  prompt_2.json  prompt_21.json  prompt_23.json  prompt_24.json  prompt_25.json  prompt_27.json  prompt_28.json  prompt_30.json  prompt_32.json  prompt_33.json  prompt_4.json  prompt_40.json  prompt_43.json  prompt_44.json  prompt_47.json  prompt_49.json  prompt_51.json  prompt_55.json  prompt_56.json  prompt_59.json  prompt_8.json  prompt_9.json
(+6038 files in other folders)
