[project]
name = "aurelius-protocol"
version = "0.1.0"
description = "Bittensor subnet for AI alignment research - v3 scaffold"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aurelius Protocol"}
]
keywords = ["bittensor", "subnet", "alignment", "validator", "miner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "bittensor>=10.1.0,<11",
    "python-dotenv>=1.0.0,<2",
    "pydantic>=2.0.0,<3",
    "jsonschema>=4.0.0,<5",
    "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.3.0,<4",
    "faiss-cpu>=1.7.0,<2",
    # xgboost 2.1 changed the sklearn estimator-type plumbing in a way that
    # breaks XGBClassifier.save_model — pin to 2.0.x until upstream settles.
    "xgboost>=2.0.0,<2.1",
    "scikit-learn>=1.4.0,<2",
]
tools = [
    "openai>=1.0.0,<2",
    "anthropic>=0.40.0,<1",
]
llm = [
    "openai>=1.0.0,<2",
    "anthropic>=0.40.0,<1",
]
simulation = [
    "docker>=7.0.0,<8",
]
benchmark = [
    "transformers>=4.38.0,<5",
    "peft>=0.9.0,<1",
    "datasets>=2.17.0,<3",
    "accelerate>=0.27.0,<1",
    "asyncpg>=0.29.0,<1",
]
dev = [
    "pytest>=7.0.0,<9",
    "pytest-asyncio>=0.21.0,<1",
    "ruff>=0.1.0,<1",
]

[project.urls]
Homepage = "https://github.com/Aurelius-Protocol/Aurelius-Protocol"
Repository = "https://github.com/Aurelius-Protocol/Aurelius-Protocol"

[project.scripts]
aurelius-validator = "aurelius.validator.validator:main"
aurelius-miner = "aurelius.miner.miner:main"
aurelius-deposit = "aurelius.cli.deposit:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aurelius*"]

[tool.setuptools.package-data]
"aurelius.common" = ["schema_v1.json"]
"aurelius.simulation" = ["Dockerfile.concordia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: mark test as end-to-end integration test",
    "slow: mark test as slow (involves network operations)",
    "onchain: tests that interact with real blockchain",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
